--- a/html/products.html
+++ b/html/products.html
@@ -6,9 +6,10 @@
   <div class="container px-4 px-lg-5 my-5" ng-repeat="product in filteredProducts | limitTo: 1">
     <div class="row gx-4 gx-lg-5 align-items-center">
       <div class="col-md-6">
-           <!-- Termék képe -->
-           <div class="card-img" ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')'}"></div>      
-         </div>
+
+        <!-- Termék képe -->
+        <div class="card-img" ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')'}"></div>
+      </div>
       <div class="col-md-6">
         <h1 class="display-5 fw-bolder">{{ product.nev }}</h1>
         <div class="fs-5 mb-5">
@@ -24,105 +25,108 @@
     </div>
   </div>
 </section>
+
 <!-- Ecogourmet features Section (miért érdemes minket választani?)-->
 <section class="py-5" id="features">
-   <div class="container px-5 my-5">
-     <div class="row gx-5">
-       <div class="col-lg-4 mb-5 mb-lg-0">
-         <h2 class="fw-bolder mb-0">{{'ecogourmet_features_title' | translate:lang.data}}</h2>
-       </div>
-       <div class="col-lg-8">
-         <div class="row gx-5 row-cols-1 row-cols-md-2 align-items-stretch">
-           <div class="col mb-5" ng-repeat="feature in ecogourmetFeatures track by $index">
-             <div class="d-flex flex-column align-items-center mb-3">
+  <div class="container px-5 my-5">
+    <div class="row gx-5">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <h2 class="fw-bolder mb-0">{{'ecogourmet_features_title' | translate:lang.data}}</h2>
+      </div>
+      <div class="col-lg-8">
+        <div class="row gx-5 row-cols-1 row-cols-md-2 align-items-stretch">
+          <div class="col mb-5" ng-repeat="feature in ecogourmetFeatures track by $index">
+            <div class="d-flex flex-column align-items-center mb-3">
 
-               <!-- Ikon és Description -->
-               <div class="d-flex justify-content-between w-100">
-                 <!-- Ikon -->
-                 <div class="aspect-ratio me-3">
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 p-3">
-                      <i class="{{feature.icon}} fa-3x" style="font-size: 3rem;"></i>
-                    </div>
-                 </div>
+              <!-- Ikon és Description -->
+              <div class="d-flex justify-content-between w-100">
 
-                 <!-- Description -->
-                 <div class="flex-grow-1">
-                   <h2 class="h5">{{feature.title | translate:lang.data}}</h2>
-                   <p class="mb-0 small">{{feature.descriptionKey | translate:lang.data}}</p>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </div>
- </section>
+                <!-- Ikon -->
+                <div class="aspect-ratio me-3">
+                  <div class="feature bg-primary bg-gradient text-white rounded-3 p-3">
+                    <i class="{{feature.icon}} fa-3x" style="font-size: 3rem;"></i>
+                  </div>
+                </div>
 
+                <!-- Description -->
+                <div class="flex-grow-1">
+                  <h2 class="h5">{{feature.title | translate:lang.data}}</h2>
+                  <p class="mb-0 small">{{feature.descriptionKey | translate:lang.data}}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
-
-<!-- Store Rész tartalma -->
+<!-- Store Rész tartalma / filter buttons / Store Cards -->
 <div class="container-fluid">
   <div class="row">
 
-<!-- Oldalsáv -->
-<aside class="col-md-3">
+    <!-- Oldalsáv -->
+    <aside class="col-md-3">
 
-   <!-- Kategória szűrő kártya -->
-   <div class="card">
-     <div class="card-header">
-       <h5>Most még igy:Szűrés</h5>
-     </div>
-     <div class="card-body">
-      
-       <!-- Kattintható szöveg a kategóriákhoz -->
-       <div ng-repeat="category in getCategoryList()">
-         <p class="mb-1" ng-click="setCategoryFilter(category)" style="cursor: pointer;">{{ category }}</p>
-       </div>
- 
-     <!-- Szűrés törlése gomb -->
-     <div class="card-footer">
-       <button class="btn btn-warning btn-sm" ng-click="clearFilters()">Szűrés törlése</button>
-     </div>
-   </div>
- </aside>
- 
-<!-- Termék kártyák -->
-<div class="col-md-9">
-   <section class="py-5" style="background-color: #f8f9fa;">
-     <div class="col-md-9 mx-auto">
-       <!-- Adjuk hozzá az "ecogourmet-cards" osztályt a kártyák konténeréhez -->
-       <div class="card-container text-center ecogourmet-cards">
-         <div class="card mb-4" ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 6)">
-           <!-- Termék képe -->
-           <div class="card-img" ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')', 'background-size': 'cover', 'background-position': 'center', 'background-repeat': 'no-repeat'}">
+      <!-- Kategória szűrő kártya -->
+      <div class="card">
+        <div class="card-header">
+          <h5>Most még igy:Szűrés</h5>
+        </div>
+        <div class="card-body">
 
- 
-           <!-- Termék részletei -->
-           <div class="card-body">
-             <div>
-               <!-- Product name-->
-               <h5 class="card-title fw-bolder small">{{product.nev}}</h5>
- 
-               <!-- Product gyártó forgalmazo-->
-               <p class="card-text small" ng-if="product.forgalmazo">{{product.forgalmazo}}</p>
- 
-               <!-- Product price-->
-               <p class="card-text text-small-caps" ng-if="product.ar_forint">Ár: {{product.ar_forint}} Ft</p>
-             </div>
-           </div>
- 
-           <!-- Product actions-->
-           <div class="card-footer bg-transparent">
-             <div>
-               <a class="btn btn-outline-dark mt-auto" href="#">Kosárba</a>
-             </div>
-           </div>
-         </div>
-       </div>
-     </div>
-   </section>
- </div>
+          <!-- Kattintható szöveg a kategóriákhoz -->
+          <div ng-repeat="category in getCategoryList()">
+            <p class="mb-1" ng-click="setCategoryFilter(category)" style="cursor: pointer;">{{ category }}</p>
+          </div>
+
+          <!-- Szűrés törlése gomb / inactive -->
+          <div class="card-footer">
+            <button class="btn btn-warning btn-sm" ng-click="clearFilters()">Szűrés törlése</button>
+          </div>
+        </div>
+    </aside>
+
+    <!-- Termék kártyák -->
+    <div class="col-md-9">
+      <section class="py-5" style="background-color: #f8f9fa;">
+        <div class="col-md-9 mx-auto">
+
+          <!-- "ecogourmet-cards" osztály-->
+          <div class="card-container text-center ecogourmet-cards">
+            <div class="card mb-4" ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 6)">
+
+              <!-- Termék képe -->
+              <div class="card-img" ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')', 'background-size': 'cover', 'background-position': 'center', 'background-repeat': 'no-repeat'}">
+
+                <!-- Termék részletei -->
+                <div class="card-body">
+                  <div>
+
+                    <!-- Product name-->
+                    <h5 class="card-title fw-bolder small">{{product.nev}}</h5>
+
+                    <!-- Product gyártó forgalmazo-->
+                    <p class="card-text small" ng-if="product.forgalmazo">{{product.forgalmazo}}</p>
+
+                    <!-- Product price-->
+                    <p class="card-text text-small-caps" ng-if="product.ar_forint">Ár: {{product.ar_forint}} Ft</p>
+                  </div>
+                </div>
+
+                <!-- Product actions-->
+                <div class="card-footer bg-transparent">
+                  <div>
+                    <a class="btn btn-outline-dark mt-auto" href="#">Kosárba</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </section>
+    </div>
   </div>
 </div>
+
 <footer ng-include src="'./html/footer.html'"></footer>
