--- a/html/about.html
+++ b/html/about.html
@@ -11,12 +11,14 @@
      </video>
    </div>
 
-   <!-- Home title -->
-   <div class="home">
-     <div class="home-content">
-       <h1 id="abut">EcoGourmet</h1>
-     </div>
-   </div>
+<!-- Home title -->
+<div class="home">
+  <div class="backdrop-filter-element"></div>
+  <div class="home-content">
+    <h1 id="abut">EcoGourmet</h1>
+  </div>
+</div>
+
 
    <!--Content after video-->
    <div class="inner-header flex">
