--- a/html/products.html
+++ b/html/products.html
@@ -61,60 +61,59 @@
     </div>
   </div>
 </section>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid text-center">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mx-auto">
+        <!-- Nav with filters -->
+        <li ng-repeat="category in getCategoryList()" class="nav-item">
+          <a class="nav-link" ng-click="setCategoryFilter(category)">{{ category }}</a>
+          <!-- Show items for all categories -->
+          <ul class="navbar-nav">
+            <li ng-repeat="item in getItemsByCategory(category)" class="nav-item">
+              <a class="nav-link" ng-click="setSelectedItem(item)">{{ item.name }}</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-<!-- Store Rész tartalma / filter buttons / Store Cards -->
+
+<!-- Store Rész tartalma / Store Cards -->
 <div class="container-fluid">
   <div class="row">
-
-    <!-- Oldalsáv -->
-    <aside class="col-md-3">
-
-      <!-- Kategória szűrő kártya -->
-      <div class="card">
-        <div class="card-header">
-          <h5>Most még igy:Szűrés</h5>
-        </div>
-        <div class="card-body">
-
-          <!-- Kattintható szöveg a kategóriákhoz -->
-          <div ng-repeat="category in getCategoryList()">
-            <p class="mb-1" ng-click="setCategoryFilter(category)" style="cursor: pointer;">{{ category }}</p>
-          </div>
-
-          <!-- Szűrés törlése gomb / inactive -->
-          <div class="card-footer">
-            <button class="btn btn-warning btn-sm" ng-click="clearFilters()">Szűrés törlése</button>
-          </div>
-        </div>
-    </aside>
+    <div class="col-md-3" style="background-image: url('./media/image/asidebg.jpg'); background-size: cover; background-position: center;">
+      <!-- Üres rész vagy más tartalom, ami az aside-ban jelenik meg -->
+    </div>
 
     <!-- Termék kártyák -->
     <div class="col-md-9">
       <section class="py-5" style="background-color: #f8f9fa;">
         <div class="col-md-9 mx-auto">
-
           <!-- "ecogourmet-cards" osztály-->
           <div class="card-container text-center ecogourmet-cards">
             <div class="card mb-4" ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 6)">
-
               <!-- Termék képe -->
               <div class="card-img" ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')', 'background-size': 'cover', 'background-position': 'center', 'background-repeat': 'no-repeat'}">
-
                 <!-- Termék részletei -->
                 <div class="card-body">
                   <div>
-
                     <!-- Product name-->
                     <h5 class="card-title fw-bolder small">{{product.nev}}</h5>
-
                     <!-- Product gyártó forgalmazo-->
                     <p class="card-text small" ng-if="product.forgalmazo">{{product.forgalmazo}}</p>
-
                     <!-- Product price-->
                     <p class="card-text text-small-caps" ng-if="product.ar_forint">Ár: {{product.ar_forint}} Ft</p>
                   </div>
                 </div>
-
                 <!-- Product actions-->
                 <div class="card-footer bg-transparent">
                   <div>
@@ -124,9 +123,11 @@
               </div>
             </div>
           </div>
+        </div>
       </section>
     </div>
   </div>
 </div>
+
 
 <footer ng-include src="'./html/footer.html'"></footer>
